@@ -1,4 +1,6 @@
 Updates--
+
+2018-05-12 v1.2.5: Fixed Boston Globe (bostonglobe.com)
 2018-05-10 v1.2.4: Fixed redirect issue
 2018-05-05 v1.2.3: Added Bloomberg (bloomberg.com)
 2018-04-23 v1.2.2: Added the English Version of Haaretz website (haaretz.com)
